# online_mart_service_class

./: README.md  ReadCreateProject.md  ReadCrudOprations.md  ReadSearchSpecificData.md  ReadUserAuth.md  Readkafka.md  compose.yaml
product_service/: .env_example  README.md  pyproject.toml
product_service/app/: Dockerfile  main.py  settings.py
test_api/: pyproject.toml
test_api/app/: main.py
user_service/: .env_example  README.md  pyproject.toml
user_service/app/: Dockerfile  main.py  settings.py
user_service/app/db/: db_connector.py
user_service/app/models/: user_model.py
