[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Raheel <raheelam98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
psycopg = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
