[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Raheel <raheelam98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
psycopg = "^3.2.3"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
